Feat: made sure everything s working fine